correçao e console js

--- a/aulas/aula04/index.html
+++ b/aulas/aula04/index.html
@@ -14,9 +14,13 @@
         <br><br>
         <input type="number" name="idade" id="idade" placeholder="escreva sua idade" required>
         <br><br>
+        <label for="admissao">admissao</label>
+        <br><br>
         <input type="date" name="admissao" id="admissao" required>
         <br><br>
-        <input type="date" name="demissao" id="demissao" required>
+        <label for="demissao">demissao</label>
+        <br><br>
+        <input type="date" name="demissao" id="demissao">
         <br><br>
         <button type="button" onclick="adicionarlinha()">Adicionar</button>
     </form>
@@ -31,7 +35,9 @@
                     <th>demissao</th>
                 </tr>
             </thead>
+            <tbody>
+            </tbody>
         </table>
-        <script src="./formularia.js"></script>
+        <script src="./formulario.js"></script>
 </body>
 </html>
