--- a/lição/30.09/index.html
+++ b/lição/30.09/index.html
@@ -1,16 +1,15 @@
-<html lang="pt-br"></html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario e Tabela</title>
+    <title>Formulário e Tabela</title>
     <link rel="stylesheet" href="./style.css">
-    
 </head>
 <body>
     <h1>Formulário e Tabela</h1>
     <hr>
     <form id="linhaform">
-        <label for="Produto">Produto:</label>
+        <label for="produto">Produto:</label>
         <input type="text" name="produto" id="produto" required>
         <br><br>
         <label for="marca">Marca:</label>
@@ -22,26 +21,26 @@
         <label for="valor">Valor:</label>
         <input type="number" name="valor" id="valor" required>
         <br><br>
-        <label for="data">Data da venda:</label>
+        <label for="datacompra">Data da venda:</label>
         <input type="date" name="datacompra" id="datacompra" required>
         <br><br>
-        <button type="button" onclick="adicionarlinha()">Adicionar</button>
+        <button type="button" onclick="adicionarLinha()">Adicionar</button>
     </form>
-        <br><br>
-        <table id="tabeladados">
-            <thead>
-                <tr>
-                    <th>id</th>
-                    <th>Produto</th>
-                    <th>Marca</th>
-                    <th>Segmento</th>
-                    <th>Valor</th>
-                    <th>Data da venda</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-        <script src="./formulario.js"></script>
+    <br>
+    <table id="tabeladados">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Produto</th>
+                <th>Marca</th>
+                <th>Segmento</th>
+                <th>Valor</th>
+                <th>Data da Venda</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <script src="./formulario.js"></script>
 </body>
 </html>
